# SelfDrivingCarTeamZero

./: .gitignore  2_scenario_follow_object_straight_road.world  2_scenario_follow_object_straight_road.xml  CMakeLists.txt  CameraPlugin.cc  CameraPlugin.hh  LidarInfo.cc  LidarInfo.hh  LidarPlugin.cc  LidarPlugin.hh  README.md  Waypoints.hh  arr_print.h  big_closed_course.world  constants.hh  dataProcessing.cc  dataProcessing.hh  dubins.cc  dubins.hh  globals.hh  long_road.world  long_road_with_box.world  long_with_box_in_the_middle.world  master_nascar_hard.world  nascar.world  nascar_hard.world  nascar_obstacle.world  plot.py  sdcAngle.cc  sdcBackLidarSensor.cc  sdcBoundingBox.cc  sdcBoundingBox.hh  sdcBoundingCircle.cc  sdcBoundingCircle.hh  sdcBoundingShape.hh  sdcCameraSensor-OLD.cc  sdcCameraSensor.cc  sdcCameraSensor.hh  sdcCar.cc  sdcCar.hh  (+28 more)
NEW CODE/: CameraSensor1.cc  CameraSensor1.hh  dataProcessing.cc  dataProcessing.hh
models/: 2_scenario_follow_object_straight_road.world
models/curved_road/: model.config  model.sdf
models/curved_road/curved_road_3/: model.config  model.sdf
models/curved_road/curved_road_3/materials/scripts/: curved_road.material
models/curved_road/materials/scripts/: curved_road.material
models/curved_road_2/: model.config  model.sdf
models/curved_road_2/materials/scripts/: curved_road_2.material
models/curved_road_4/: model.config  model.sdf
models/curved_road_4/materials/scripts/: curved_road_2.material  curved_road_4.material
models/sdcCar/: sdcCar.sdf  sdcCar.sdf~
